--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
     <title>The Gif-Tastic App</title>
 </head>
 
@@ -28,6 +29,8 @@
             <input id="add-gif" type="submit" value="Add a gif!!">
         </form>
 
+
+        <div id="gifs-view"></div>
 
 
 
