Fixed my searchGif function for my ajax, gifs now correctly prepend to the page in max of 10! Also correctly sets the data state as well as stores the two urls needed to switch in data attributes. Horray! Now to fix the button function and add the function to change state.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
         <div id="buttons-view"></div>
 
         <div class="row">
-            <!-- Gif View Area-->
-            <div class="col" id="gifs-view"></div>
-
-            <!-- Form to create text area to enter gif from user-->
+                        <!-- Form to create text area to enter gif from user-->
             <div class="col" id="form-area">
                 <form id="gif-form">
                     <label id="gif-input">Add a gif!</label>
@@ -36,6 +33,10 @@
                     <input id="add-gif" type="submit" value="Add a gif!!">
                 </form>
             </div>
+            <div class="row"></div>
+
+            <!-- Gif View Area-->
+            <div class="row" id="gifs-view"></div>
 
         </div>
 
