Gah, got buttons to appear, but only through the loop code from a past activity. I like using For Each much better as I did for the gifs, but can't seem to get that to work for this.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="col" id="form-area">
                 <form id="gif-form">
                     <label id="gif-input">Add a gif!</label>
-                    <input type="text" id="gif-input"><br>
+                    
 
                     <!-- Button to trigger new gif-->
-                    <input id="add-gif" type="submit" value="Add a gif!!">
+                    <input id="add-gif""></input>
                 </form>
             </div>
             <div class="row"></div>
